--- a/ui/html/signup.page.tmpl
+++ b/ui/html/signup.page.tmpl
@@ -26,6 +26,14 @@
 {{end}}
 <input type='password' name='password'>
 </div>
+
+<div>
+<label>Role:</label>
+<select name="role">
+  <option value="teacher">Teacher</option>
+  <option value="student">Student</option>
+</select>
+</div>
 <div>
 <input type='submit' value='Signup'>
 </div>
