--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -12,12 +12,13 @@
 
 <body>
     <header>
-        <h1><a href='/'>AITU News</a></h1>
+        <h1><a href='/'>AITU Movies</a></h1>
                   {{if .IsAuthenticated}}
-                              {{if .IsTeacher}}
-                                  <p>Teacher</p>
+                              {{if .IsAdmin}}
+                                  <p>Admin</p>
+
                               {{else}}
-                                  <p>Student</p>
+                                  <p>Supplier</p>
                               {{end}}
                           {{end}}
 
@@ -27,13 +28,13 @@
             <a href='/'>Home</a>
             {{if .IsAuthenticated}}
 
- {{if .IsTeacher}}
-            <a href='/news/create'>Create News</a>
+ {{if .IsAdmin}}
+              <a href='/movies/create'>Create movies</a>
    {{end}}
-            <a href='/category/student'>For Students</a>
-            <a href='/category/staff'>For Staff</a>
-            <a href='/category/applicant'>For Applicants</a>
-            <a href='/category/research'>For Researches</a>
+            <a href='/genre/horror'>Horror</a>
+            <a href='/genre/comedy'>Comedy</a>
+            <a href='/genre/drama'>Drama</a>
+            <a href='/genre/scifi'>Scifi</a>
             {{end}}
         </div>
 
