--- a/ui/html/signup.page.tmpl
+++ b/ui/html/signup.page.tmpl
@@ -30,8 +30,8 @@
 <div>
 <label>Role:</label>
 <select name="role">
-  <option value="teacher">Teacher</option>
-  <option value="student">Student</option>
+  <option value="admin">Admin</option>
+  <option value="supplier">Supplier</option>
 </select>
 </div>
 <div>
